--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,7 @@ strong {
 }
 
 #solutions-title {
-	padding-left: 231px;
+	padding-left: 200px;
 	padding-top: 40px;
 }
 
@@ -383,4 +383,14 @@ strong {
 #solutions-button-arrow {
 	padding-left: 10px;
 	margin-bottom: -2px;
+}
+
+.section-events {
+	background: url(../img/news-and-events-bg.jpg) no-repeat center;
+	box-shadow: 0 0 5px 1px rgba(0,0,0,0.5);
+}
+
+#events-title {
+	padding-left: 160px;
+
 }
