--- a/css/main.css
+++ b/css/main.css
@@ -470,7 +470,7 @@ strong {
 
 .events-list > li {
     display: inline-block;
-    width: 287px;
+    width: 278px;
     padding: 15px;
 }
 
@@ -714,4 +714,204 @@ h1.event-date {
 #all-success-stories-btn-div {
 	margin-top: 308px;
     margin-left: 385px;
+}
+
+#all-success-stories-button-arrow {
+	margin-left: 3px;
+    margin-bottom: -2px;
+}
+
+footer {
+	background-color: #2B2B2B;
+    height: 350px;
+    width: 100%;
+    margin-top: -20px;
+    box-shadow: inset 0px 4px 10px -3px hsla(0, 0%, 26%, 0.5);
+}
+
+.footer-block {
+    max-width: 960px;
+    min-width: 800px;
+    width: 960px;
+    margin: 0 auto;
+}
+
+.footer-data {
+	margin-left: 63px;
+}
+
+.footer-data-column {
+    float: left;
+    margin-right: 32px;
+    line-height: 20px;
+}
+
+.footer-data-column a {
+	text-decoration: none;
+    color: white;
+    font-size: 14px;
+}
+
+.footer-data-column a:hover {
+    text-decoration: underline;
+}
+
+.footer-data-column > ul  {
+	list-style: none;
+	margin-left: -37px;
+}
+
+.footer-right h4 {
+    color: #3195c9;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-left: 17px;
+
+}
+
+.footer-right {
+    float: right;
+    background-color: #3d3d3d;
+    width: 240px;
+    position: relative;
+    height: 350px;
+}
+
+.footer-date-box {
+    width: 60px;
+    height: 80px;
+    padding: 2px;
+    float: left;
+    margin: -9px 10px 0 5px;
+}
+
+.footer-date-day {
+   	color: #FFFFFF;
+    margin: 0;
+    text-align: center;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.footer-date-month {
+    color: #FFFFFF;
+    margin-top: -5px;
+    margin-left: 5px;
+    text-align: center;
+    font-size: 19px;
+    font-weight: 400;
+}
+
+.footer-right-post {
+	border-bottom: 1px solid #ccc;
+    margin-left: 19px;
+    margin-right: 22px;
+}
+
+.footer-right-post > p {
+	color: #FFFFFF;
+	font-weight: 100;
+	font-size: 15px;
+}
+
+#footer-right-subscribe {
+	font-size: 16px;
+}
+
+#email {
+    width: 122px;
+    line-height: 2.4em;
+    border-radius: 3px;
+    border: none;
+    margin: 0 5px;
+    padding-left: 8px;
+    color: grey;
+    outline:none;
+    margin-left: 15px;
+}
+
+#subscribe-email-submit {
+  background: #3aa6db;
+  border-radius: 3px;
+  border: none;
+  color: white;
+  line-height: 2.3em;
+  margin-left: -7px;
+  padding: 2px 10px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.social-network-logos {
+	padding: 10px;
+    width: 230px;
+    position: absolute;
+    bottom:0;
+}
+
+.youtube-logo {
+	background: url(../img/socialMenuIcon-youtube.png) no-repeat;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+}
+
+.youtube-logo:hover {
+	background: url(../img/socialMenuIcon-youtube_hover.png) no-repeat;
+}
+
+.twitter-logo {
+    background: url(../img/socialMenuIcon-twitter.png) no-repeat;
+    display: inline-block;
+    width: 30px;
+    height: 22px;
+}
+
+.twitter-logo:hover {
+	background: url(../img/socialMenuIcon-twitter_hover.png) no-repeat;
+}
+
+.linkedin-logo {
+    background: url(../img/socialMenuIcon-linkdin.png) no-repeat;
+    display: inline-block;
+    width: 28px;
+    height: 22px;
+}
+
+.linkedin-logo:hover {
+	 background: url(../img/socialMenuIcon-linkdin_hover.png) no-repeat;
+}
+
+.footer-bottom-nav {
+    margin-right: 0px;
+    font-size: 14px;
+    width: 676px;
+    height: 20px;
+    float: left;
+    margin-top:58px;
+    display: inline-block;
+}
+
+ul.footer-menu {
+    margin: 0px;
+    padding: 0px;
+    margin-left: 64px;
+}
+
+.footer-menu > li {
+    list-style: none;
+    margin: 0px;
+    display: inline-block;
+    color: grey;
+
+}
+
+.footer-menu > li > a {
+    color: grey;
+    text-decoration: none;
+}
+
+.footer-menu > li > a:hover{
+	color: white;
 }
