--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,11 @@ header {
 	box-shadow: 0 0 5px 1px rgba(0,0,0,0.5);
 
 }
+
+.hidden {
+    display: none;
+}
+
 .nav-container {
     background-color: #fff;
     padding: 0;
