--- a/css/main.css
+++ b/css/main.css
@@ -1088,11 +1088,13 @@ display: none;
     margin: 5px;
     padding: 6px 3px 0px 3px;
     display: inline-block;
+    background-color: rgb(241,241,241);
+    border-radius: 3px;
 }
 .navbar{
 	display: none;
 }
-.mobile-search-icon{
+/*.mobile-search-icon{
 	    float: right;
     height: 30px;
     width: 30px;
@@ -1102,7 +1104,7 @@ display: none;
     margin: 5px;
     padding: 6px 3px 0px 3px;
     display: inline-block;
-}
+}*/
 
 
  .mobile-navigation {
